@@ -24,28 +24,28 @@
     <dependency>
       <groupId>io.avaje</groupId>
       <artifactId>avaje-config</artifactId>
-      <version>3.1</version>
+      <version>3.9</version>
       <optional>true</optional>
     </dependency>
 
     <dependency>
       <groupId>io.avaje</groupId>
       <artifactId>avaje-inject</artifactId>
-      <version>9.0</version>
+      <version>9.9</version>
       <optional>true</optional>
     </dependency>
 
     <dependency>
       <groupId>com.fasterxml.jackson.core</groupId>
       <artifactId>jackson-databind</artifactId>
-      <version>2.14.0</version>
+      <version>${jackson.version}</version>
       <optional>true</optional>
     </dependency>
 
     <dependency>
       <groupId>io.avaje</groupId>
       <artifactId>avaje-jsonb</artifactId>
-      <version>1.4</version>
+      <version>1.9</version>
       <optional>true</optional>
     </dependency>
 
@@ -53,21 +53,21 @@
 
   <build>
     <plugins>
-      <plugin>
-        <groupId>org.apache.maven.plugins</groupId>
-        <artifactId>maven-surefire-plugin</artifactId>
-        <configuration>
-          <argLine>
-            --add-opens io.avaje.jex/io.avaje.jex.base=com.fasterxml.jackson.databind
-            --add-modules com.fasterxml.jackson.databind
-            --add-opens io.avaje.jex/io.avaje.jex=ALL-UNNAMED
-            --add-opens io.avaje.jex/io.avaje.jex.base=ALL-UNNAMED
-            --add-opens io.avaje.jex/io.avaje.jex.core=ALL-UNNAMED
-            --add-opens io.avaje.jex/io.avaje.jex.routes=ALL-UNNAMED
-            --add-opens io.avaje.jex/io.avaje.jex.jetty=ALL-UNNAMED
-          </argLine>
-        </configuration>
-      </plugin>
+<!--      <plugin>-->
+<!--        <groupId>org.apache.maven.plugins</groupId>-->
+<!--        <artifactId>maven-surefire-plugin</artifactId>-->
+<!--        <configuration>-->
+<!--          <argLine>-->
+<!--            &#45;&#45;add-opens io.avaje.jex/io.avaje.jex.base=com.fasterxml.jackson.databind-->
+<!--            &#45;&#45;add-modules com.fasterxml.jackson.databind-->
+<!--            &#45;&#45;add-opens io.avaje.jex/io.avaje.jex=ALL-UNNAMED-->
+<!--            &#45;&#45;add-opens io.avaje.jex/io.avaje.jex.base=ALL-UNNAMED-->
+<!--            &#45;&#45;add-opens io.avaje.jex/io.avaje.jex.core=ALL-UNNAMED-->
+<!--            &#45;&#45;add-opens io.avaje.jex/io.avaje.jex.routes=ALL-UNNAMED-->
+<!--            &#45;&#45;add-opens io.avaje.jex/io.avaje.jex.jetty=ALL-UNNAMED-->
+<!--          </argLine>-->
+<!--        </configuration>-->
+<!--      </plugin>-->
     </plugins>
   </build>
 
